--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,59 @@
+/*media queries*/
+@media only screen and (max-width: 768px) {
+  .slow1 {
+    flex-direction: column;
+    align-items: center; }
+  .slow1 img {
+    width: 700px; }
+  .slow-li {
+    flex-direction: column-reverse; }
+  .slow-fin {
+    display: flex;
+    justify-content: center; } }
+
+@media only screen and (max-width: 576px) {
+  /*index*/
+  .article-sis {
+    flex-direction: column;
+    padding: 15px; }
+  .article-sis p {
+    padding: 20px; }
+  .article-slow {
+    flex-direction: column-reverse; }
+  .article-slow p {
+    padding: 20px; }
+  .image-article img {
+    width: 500px; }
+  /*nosotras*/
+  .nosotras {
+    flex-direction: column; }
+  .nosotras img {
+    width: 500px; }
+  /*slow fashion*/
+  .slow1 {
+    flex-direction: column;
+    align-items: center; }
+  .slow1 img {
+    width: 500px; }
+  .slow-li {
+    flex-direction: column-reverse; }
+  .slow-fin {
+    display: flex;
+    justify-content: center; } }
+
 * {
   margin: 0;
   padding: o; }
 
+/*variables de color*/
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
 
 /* header  */
 header {
   box-shadow: 1px 10px 6px -3px rgba(156, 149, 149, 0.9); }
-
-header img {
-  width: 310px; }
+  header img {
+    width: 310px; }
 
 .navbar {
   background-color: #e3de76; }
@@ -48,14 +91,12 @@ main {
   background-color: #f8e96c;
   align-items: center;
   padding: 50px; }
-
-.article-sis img {
-  width: 400px; }
-
-.article-sis p {
-  padding-left: 50px;
-  font-size: 20px;
-  text-align: justify; }
+  .article-sis img {
+    width: 400px; }
+  .article-sis p {
+    padding-left: 50px;
+    font-size: 20px;
+    text-align: justify; }
 
 .article-slow-title {
   text-align: center;
@@ -67,21 +108,18 @@ main {
   background-color: #fbf7ee;
   padding: 50px;
   margin-bottom: 20px; }
-
-.article-slow p {
-  padding: 30px;
-  font-size: 20px;
-  text-align: justify; }
-
-.article-slow img {
-  font-size: 18px; }
-
-.article-slow a {
-  text-decoration: none;
-  color: black; }
+  .article-slow p {
+    padding: 30px;
+    font-size: 20px;
+    text-align: justify; }
+  .article-slow img {
+    font-size: 18px; }
+  .article-slow a {
+    text-decoration: none;
+    color: black; }
 
 .link {
-  background-color: #0c573e;
+  background-color: #13704e;
   padding: 5px;
   border-radius: 3px;
   width: 50px;
@@ -95,15 +133,13 @@ main {
   padding: 50px;
   margin-bottom: 20px;
   background-color: #88afa7; }
-
-.article-circ p {
-  padding: 30px;
-  font-size: 20px;
-  text-align: justify; }
-
-.article-circ a {
-  text-decoration: none;
-  color: black; }
+  .article-circ p {
+    padding: 30px;
+    font-size: 20px;
+    text-align: justify; }
+  .article-circ a {
+    text-decoration: none;
+    color: black; }
 
 .article-container {
   display: flex;
@@ -118,10 +154,9 @@ main {
 
 .nosotras-text {
   padding: 20px; }
-
-.nosotras-text p {
-  font-size: 20px;
-  text-align: justify; }
+  .nosotras-text p {
+    font-size: 20px;
+    text-align: justify; }
 
 .tituloSecundario {
   font-size: 45px;
@@ -140,28 +175,25 @@ main {
   justify-content: center;
   align-items: center;
   padding: 20px; }
-
-.slow1 p {
-  padding: 20px;
-  text-align: justify; }
+  .slow1 p {
+    padding: 20px;
+    text-align: justify; }
 
 .slow2 {
   padding: 40px; }
-
-.slow2 p {
-  padding: 30px;
-  margin: 10px;
-  font-size: 1.3rem;
-  text-align: center; }
+  .slow2 p {
+    padding: 30px;
+    margin: 10px;
+    font-size: 1.3rem;
+    text-align: center; }
 
 .slow-li {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 20px; }
-
-.slow-li ul {
-  padding: 30px; }
+  .slow-li ul {
+    padding: 30px; }
 
 /*cards*/
 .bg-sweater {
@@ -241,51 +273,8 @@ main {
 
 footer i {
   font-size: 30px;
-  color: #0c573e;
+  color: #13704e;
   margin: 20px; }
 
 footer i:hover {
   color: #427f12; }
-
-/*media queries*/
-@media only screen and (max-width: 768px) {
-  .slow1 {
-    flex-direction: column;
-    align-items: center; }
-  .slow1 img {
-    width: 700px; }
-  .slow-li {
-    flex-direction: column-reverse; }
-  .slow-fin {
-    display: flex;
-    justify-content: center; } }
-
-@media only screen and (max-width: 576px) {
-  /*index*/
-  .article-sis {
-    flex-direction: column;
-    padding: 15px; }
-  .article-sis p {
-    padding: 20px; }
-  .article-slow {
-    flex-direction: column-reverse; }
-  .article-slow p {
-    padding: 20px; }
-  .image-article img {
-    width: 500px; }
-  /*nosotras*/
-  .nosotras {
-    flex-direction: column; }
-  .nosotras img {
-    width: 500px; }
-  /*slow fashion*/
-  .slow1 {
-    flex-direction: column;
-    align-items: center; }
-  .slow1 img {
-    width: 500px; }
-  .slow-li {
-    flex-direction: column-reverse; }
-  .slow-fin {
-    display: flex;
-    justify-content: center; } }
