--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -1,7 +1,13 @@
+@import "index";
+@import "nosotras";
+@import "slowfashion";
+@import "productos";
+@import "contacto";
 @import "mqueries";
+
 * {
   margin: 0;
-  padding: o;
+  padding: 0;
 }
 
 /*variables de color*/
@@ -38,229 +44,6 @@ header {
 .dropdown-item {
   color: $darkgreen;
   font-weight: 600;
-}
-main {
-  margin-top: 130px;
-  margin-bottom: 30px;
-}
-.imagenBanner {
-  width: 100%;
-}
-.sectionIndex h1 {
-  text-align: center;
-  font-weight: bolder;
-  color: $green;
-}
-.article-sis {
-  display: flex;
-  background-color: #f8e96c;
-  align-items: center;
-  padding: 50px;
-  img {
-    width: 400px;
-  }
-  p {
-    padding-left: 50px;
-    font-size: 20px;
-    text-align: justify;
-  }
-}
-
-.article-slow-title {
-  text-align: center;
-  color: $green;
-}
-.article-slow {
-  @extend .article-sis;
-  background-color: #fbf7ee;
-  margin-bottom: 20px;
-  p {
-    padding: 30px;
-    font-size: 20px;
-    text-align: justify;
-  }
-  img {
-    font-size: 18px;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
-}
-
-.link {
-  background-color: $darkgreen;
-  padding: 5px;
-  border-radius: 3px;
-  width: 50px;
-  text-align: center;
-  margin: 5px;
-}
-.article-circ {
-  display: flex;
-  align-items: center;
-  background-color: #88afa7;
-  padding: 50px;
-  margin-bottom: 20px;
-  background-color: #88afa7;
-  p {
-    padding: 30px;
-    font-size: 20px;
-    text-align: justify;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
-}
-
-.article-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-/*nosotras*/
-.nosotras {
-  display: flex;
-  align-items: center;
-  padding: 40px;
-}
-.nosotras-text {
-  padding: 20px;
-  p {
-    font-size: 20px;
-    text-align: justify;
-  }
-}
-
-.tituloSecundario {
-  font-size: 45px;
-  color: $green;
-  text-align: center;
-  font-weight: bolder;
-  margin: 20px;
-}
-/* slow-fashion */
-@mixin title($align, $color) {
-  text-align: $align;
-  color: $color;
-}
-
-.slow-title {
-  @include title(center, $green);
-}
-.slow1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  p {
-    padding: 20px;
-    text-align: justify;
-  }
-}
-
-.slow2 {
-  padding: 40px;
-  p {
-    padding: 30px;
-    margin: 10px;
-    font-size: 1.3rem;
-    text-align: center;
-  }
-}
-
-.slow-li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-  ul {
-    padding: 30px;
-  }
-}
-
-/*cards*/
-.bg-sweater {
-  background-image: url(../imagenes/banner-sw.jpg);
-}
-.bg-falda {
-  background-image: url(../imagenes/banner-fd.jpg);
-}
-.bg-vest {
-  background-image: url(../imagenes/banner-vest.jpg);
-}
-.bg-cam {
-  background-image: url(../imagenes/banner-cam.jpg);
-}
-.bg-jean {
-  background-image: url(../imagenes/banner-jn.jpg);
-}
-.btn {
-  background-color: $green;
-  color: white;
-  width: 80%;
-}
-/*map*/
-$estilosBanner: (
-  background-r: no-repeat,
-  background-p: center center,
-  background-s: cover,
-  width: 100%,
-  height: 50vh,
-  margin-b: 20px,
-  position: flex,
-  align-i: flex-end,
-);
-
-.banner {
-  background-repeat: map-get($estilosBanner, background-r);
-  background-position: map-get($estilosBanner, background-p);
-  background-size: map-get($estilosBanner, background-s);
-  width: map-get($estilosBanner, width);
-  height: map-get($estilosBanner, height);
-  margin-bottom: map-get($estilosBanner, margin-b);
-  display: map-get($estilosBanner, position);
-  align-items: map-get($estilosBanner, align-i);
-}
-
-.banner h1 {
-  font-weight: bolder;
-  color: black;
-  padding: 20px;
-  background: gainsboro;
-  opacity: 0.7;
-  font-size: 25px;
-}
-/*contacto*/
-.tituloContacto {
-  color: $green;
-  font-size: 30px;
-  font-weight: bolder;
-  padding: 20px;
-  text-align: start;
-}
-.contacto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 130px 20px;
-}
-.formulario {
-  font-size: medium;
-  padding: 20px;
-  margin: 10px;
-  border: 1px solid #bed5cd;
-  border-radius: 5px;
-  background: #ddde8b;
-  width: 60%;
-}
-.form-control {
-  width: 100%;
-}
-.form-check-input:checked {
-  background-color: $green;
-  border-color: $green;
 }
 
 /* footer */
